--- a/index.html
+++ b/index.html
@@ -15,22 +15,42 @@
     <!-- styles.css -->
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
 </head>
-<body CLASS="debug">
+<body>
 
     <!-- Exercise made by
     CARLO EUSEBI -->
 
     <!-- HEADER -->
-    <header class="d-flex justify-space-between">
-        <div class="hdr-left">test</div>
-        <div class="hdr-right">test</div>
+    <header class="d-flex justify-space-between align-center">
+        <div class="flex-left d-flex align-center">
+            <div class="logo">
+                <img src="img/logo-small.png" alt="logo">
+            </div>
+            <nav>
+                <ul class="d-flex f-gap10">
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="flex-right">
+            <nav>
+                <ul class="d-flex f-gap10">
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                    <li><a class="btn btn-main" href="#">Inizia</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- MAIN -->
     <main>
 
         <!-- HERO SECTION -->
-        <section id="hero">
+        <section id="hero" class="debug">
             <div class="container-big">
                 <h1>lorem ipsum</h1>
                 <div class="d-flex">
@@ -42,7 +62,7 @@
         </section>
 
         <!-- SHOP SECTION -->
-        <section id="shop">
+        <section id="shop" class="debug">
             <div class="container-small">
                 <h2>lorem</h2>
                 <p>lorem</p>
@@ -58,7 +78,7 @@
         </section>
 
         <!-- PARTNERS SECTION -->
-        <section id="partners">
+        <section id="partners" class="debug">
             <div class="container-small d-flex">
                 <div class="flex-left"></div>
                 <div class="flex-right"></div>
@@ -66,7 +86,7 @@
         </section>
 
         <!-- DB BUSINESS SECTION -->
-        <section id="dropbox-business">
+        <section id="dropbox-business" class="debug">
 
             <section id="dropbox-business-promo">
                 <div class="container-small">
@@ -112,7 +132,7 @@
         </section>
 
         <!-- FAQ QUESTION -->
-        <section id="faq">
+        <section id="faq" class="debug">
             <div class="container-small">
 
             </div>
