--- a/index.html
+++ b/index.html
@@ -50,12 +50,23 @@
     <main>
 
         <!-- HERO SECTION -->
-        <section id="hero" class="debug">
+        <section id="hero">
             <div class="container-big">
-                <h1>lorem ipsum</h1>
+                <h1>Tutto ciò che ti serve per il posto di lavoro, in un unico posto</h1>
                 <div class="d-flex">
-                    <div class="flex-left db-border"></div>
-                    <div class="flex-right db-border"></div>
+                    <div class="flex-left db-border">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è piu' di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <a href="#" class="btn btn-main">Inizia la tua prova gratuita</a>
+                        <p>Annulla in qualsiasi momemnto</p>
+                        <i class="fa-sharp fa-solid fa-arrow-down fa-3x"></i>
+                    </div>
+                    <div class="flex-right db-border">
+                        <figure>
+                            <img src="img/jumbo.png" alt="hero image">
+                        </figure>
+                    </div>
                 </div>
 
             </div>
