--- a/index.html
+++ b/index.html
@@ -73,16 +73,140 @@
         </section>
 
         <!-- SHOP SECTION -->
-        <section id="shop" class="debug">
+        <section id="shop">
             <div class="container-small">
-                <h2>lorem</h2>
-                <p>lorem</p>
-                <div class="d-flex justify-center">
-                    <div class="shopping-plan card db-border"></div>
-                    <div class="shopping-plan card db-border"></div>
-                    <div class="shopping-plan card db-border"></div>
+                <h2>Trova il piano business che fa per te</h2>
+                <div class="d-flex mb2">
+                    <!-- display flex prefectly aligns radioes and text -->
+                    <span class="radio-btn radio-checked"></span><span class="mr2">Fatturazione mensile</span>
+                    <span class="radio-btn radio-unchecked"></span>Fatturazione annuale
                 </div>
-                <div class="card db-border">
+
+                <div class="sopphing-cards-container d-flex justify-center f-gap40">
+
+
+                    <!-- fist card
+                    Professional card -->
+                    <div class="card-flex card">
+                        <!-- card title -->
+                        <div class="card-title">
+                            <i class="fa-solid fa-user"></i> Singolo
+                        </div>
+                        <!-- card body -->
+                        <div class="card-body">                            
+                            <h3>Professional</h3>
+                            <div class="price mb1">€ 12.00</div>
+                            <div class="price-recurrency">/mese</div>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul mb2">
+                                <li><span class="fa-li"><i class="fa-solid fa-user"></i></span>1 utente</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>5 TB di spazioe di archiviazione sicuro</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Funzioni di produttività premium e condivisione file semplice e sicura</li>   
+                            </ul>
+                            <a class="btn btn-main" href="#">Prova gratis per 30 giorni</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h4>Punti Salienti del piano</h4>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <!-- second card
+                    Andvanced option -->
+                    <div class="card-flex card">
+                        <!-- card title -->
+                        <div class="card-title">
+                            <i class="fa-solid fa-users"></i> Team
+                        </div>
+                        <!-- card body -->
+                        <div class="card-body">                            
+                            <h3>Advanced</h3>
+                            <div class="price mb1">€ 18.00</div>
+                            <div class="price-recurrency">/utente/mese</div>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul mb2">
+                                <li><span class="fa-li"><i class="fa-solid fa-users"></i></span>3 o piu' utenti</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>Tutto lo spzio di cui ha bisogno il tuo team</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i files del tuo team</li>   
+                            </ul>
+                            <a class="btn btn-main" href="#">Prova gratis per 30 giorni</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h4>Punti Salienti del piano</h4>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Nessun limite di spazio per i tuoi files</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Possibilità di inserire nuovi membri del team</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Gestione dei permessi in base ai ruoli</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <!-- Third card
+                    Enterprise option -->
+                    <div class="card-flex card">
+                        <!-- card title -->
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i> Azienda
+                        </div>
+                        <!-- card body -->
+                        <div class="card-body">                            
+                            <h3>Enterprise</h3>
+                            <div class="pricemb1">Contattateci</div>
+                            <div class="price-recurrency">-</div>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul mb2">
+                                <li><span class="fa-li"><i class="fa-solid fa-users"></i></span>10 o piu' utenti</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>Soluzioni personalizzabili per la tua azienda</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>   
+                            </ul>
+                            <a class="btn btn-main" href="#">Contattaci</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h4>Punti Salienti del piano</h4>
+                            <!-- lists use font-awesome as list bullets, this way text is properly indented -->
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Servizio assistenza 24/h</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Possibilità di personalizzazione totale</li>
+                            </ul>
+                        </div>
+                    </div>
+                    
+
+
+
+
+                <!-- end of flex container
+                .sopphing-cards-container-->
+                </div>
+
+                <!-- the single card has the same layout so it shares some classes -->
+                <div class="card only-onrow-card">
+                    <div class="card-title">
+                        <i class="fa-solid fa-building"></i> Team
+                    </div>
+                    <div class="card-body d-flex justify-space-between align-flex-start">
+                        <div class="flex-left">
+                            <h3>Enterprise</h3>
+                            <div class="price mb3">Contatta l'ufficio vendite per i prezzi</div>
+                            <p>
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                            </p>
+
+                        </div>
+                        <div class="flex-right">
+                            <a class="btn btn-main" href="#">Contatta l'ufficio vendite</a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
