Fixed titles in shopping columns

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">                            
-                            <h3>Professional</h3>
+                            <h4>Professional</h4>
                             <div class="price mb1">€ 12.00</div>
                             <div class="price-recurrency">/mese</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
@@ -106,7 +106,7 @@
                             <a class="btn btn-main" href="#">Prova gratis per 30 giorni</a>
                             <p>oppure <a href="#">acquista ora</a></p>
                             <hr>
-                            <h4>Punti Salienti del piano</h4>
+                            <h5>Punti Salienti del piano</h5>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
                             <ul class="fa-ul">
                                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
@@ -125,7 +125,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">                            
-                            <h3>Advanced</h3>
+                            <h4>Advanced</h4>
                             <div class="price mb1">€ 18.00</div>
                             <div class="price-recurrency">/utente/mese</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
@@ -137,7 +137,7 @@
                             <a class="btn btn-main" href="#">Prova gratis per 30 giorni</a>
                             <p>oppure <a href="#">acquista ora</a></p>
                             <hr>
-                            <h4>Punti Salienti del piano</h4>
+                            <h5>Punti Salienti del piano</h5>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
                             <ul class="fa-ul">
                                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Nessun limite di spazio per i tuoi files</li>
@@ -159,8 +159,8 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">                            
-                            <h3>Enterprise</h3>
-                            <div class="pricemb1">Contattateci</div>
+                            <h4>Enterprise</h4>
+                            <div class="price mb1">Contattateci</div>
                             <div class="price-recurrency">-</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
                             <ul class="fa-ul mb2">
@@ -171,7 +171,7 @@
                             <a class="btn btn-main" href="#">Contattaci</a>
                             <p>oppure <a href="#">acquista ora</a></p>
                             <hr>
-                            <h4>Punti Salienti del piano</h4>
+                            <h5>Punti Salienti del piano</h5>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
                             <ul class="fa-ul">
                                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="card-body d-flex justify-space-between align-flex-start">
                         <div class="flex-left">
-                            <h3>Enterprise</h3>
+                            <h4>Enterprise</h4>
                             <div class="price mb3">Contatta l'ufficio vendite per i prezzi</div>
                             <p>
                                 Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
@@ -213,10 +213,16 @@
         </section>
 
         <!-- PARTNERS SECTION -->
-        <section id="partners" class="debug">
+        <section id="partners">
             <div class="container-small d-flex">
-                <div class="flex-left"></div>
-                <div class="flex-right"></div>
+                <div class="flex-left">
+                    <figure>
+                        <img src="img/partner.png" alt="partners">
+                    </figure>
+                </div>
+                <div class="flex-right">
+
+                </div>
             </div>                
         </section>
 
