--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
             </div>
 
             <div class="partners-logoes-container d-flex">
+
                 <div class="flex-left d-flex f-wrap">
+
                     <div class="flex-item bg-designit d-flex align-center justify-center">
                         <img class="svg" src="img/designit.svg" alt="designit">
                     </div>
@@ -333,10 +335,10 @@
                     </div>  
                     <div class="flex-item bg-topps d-flex align-center justify-center">
                         <img class="svg" src="img/topps.svg" alt="topps">
-                    </div>
-                    
+                    </div>               
                     
                 </div>
+
                 <div class="flex-center">
                     <img src="img/designit.svg" alt="designit logo" class="svg">
                     <hr>
@@ -364,8 +366,9 @@
                         <img class="svg" src="img/clear_channel.svg" alt="clear_channel">
                     </div>                        
                 </div>
-            </div>        
-            <div class="bus-part-bottom-part">
+            </div>
+
+            <div class="bus-part-bottom">
                 <div class="container-small d-flex align-center">
                     <div class="flex-left">
                         <h2>Porta Dropbox Business nella tua azienda</h2>
