Added effects on nav buttons hover

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
             <nav>
                 <ul class="d-flex f-gap10">
-                    <li><a href="#">Perchè Dropbox</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e Prezzi</a></li>
+                    <li class="d-flex align-center"><a href="#">Perchè Dropbox</a></li>
+                    <li class="d-flex align-center"><a href="#">Funzioni</a></li>
+                    <li class="d-flex align-center"><a href="#">Piani e Prezzi</a></li>
                 </ul>
             </nav>
 
@@ -46,10 +46,10 @@
         <div class="flex-right">
             <nav>
                 <ul class="d-flex f-gap10">
-                    <li><a href="#">Supporto</a></li>
-                    <li><a href="#">Contatta l'ufficio vendite</a></li>
-                    <li><a href="#">Accedi</a></li>
-                    <li><a class="btn btn-main" href="#">Inizia</a></li>
+                    <li class="d-flex align-center"><a href="#">Supporto</a></li>
+                    <li class="d-flex align-center"><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li class="d-flex align-center"><a href="#">Accedi</a></li>
+                    <li class="d-flex align-center"><a class="btn btn-main" href="#">Inizia</a></li>
                 </ul>
             </nav>
         </div>
