--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <!-- hero's button -->
                         <a href="#" class="btn btn-main mb3">Inizia la tua prova gratuita</a>
 
-                        <p>Annulla in qualsiasi momemnto</p>
+                        <p>Annulla in qualsiasi momento</p>
                     </div>
                     
                     <div class="flex-right">
@@ -128,7 +128,7 @@
                             <div class="price mb1">€ 12.00</div>
                             <div class="price-recurrency">/mese</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
-                            <ul class="fa-ul mb2">
+                            <ul class="fa-ul mb5">
                                 <li><span class="fa-li"><i class="fa-solid fa-user"></i></span>1 utente</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>5 TB di spazioe di archiviazione sicuro</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Funzioni di produttività premium e condivisione file semplice e sicura</li>   
@@ -162,7 +162,7 @@
                             <div class="price mb1">€ 18.00</div>
                             <div class="price-recurrency">/utente/mese</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
-                            <ul class="fa-ul mb2">
+                            <ul class="fa-ul mb5">
                                 <li><span class="fa-li"><i class="fa-solid fa-users"></i></span>3 o piu' utenti</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>Tutto lo spzio di cui ha bisogno il tuo team</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i files del tuo team</li>   
@@ -196,7 +196,7 @@
                             <div class="price mb1">Contattateci</div>
                             <div class="price-recurrency">-</div>
                             <!-- lists use font-awesome as list bullets, this way text is properly indented -->
-                            <ul class="fa-ul mb2">
+                            <ul class="fa-ul mb5">
                                 <li><span class="fa-li"><i class="fa-solid fa-users"></i></span>10 o piu' utenti</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-folder"></i></span>Soluzioni personalizzabili per la tua azienda</li>
                                 <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>   
@@ -233,7 +233,7 @@
 
                         <div class="flex-left">
                             <h4>Enterprise</h4>
-                            <div class="price mb3">Contatta l'ufficio vendite per i prezzi</div>
+                            <div class="price mb5">Contatta l'ufficio vendite per i prezzi</div>
                             <p>
                                 Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
                             </p>
@@ -492,7 +492,7 @@
         <div class="container-big">
 
             <!-- top part of the footer is a flex container with five columns -->
-            <div class="fter-top d-flex">
+            <div class="fter-top d-flex mb10">
 
                 <!-- each column has a an h4 title and a list of links -->
                 <div class="flex-item">
@@ -560,7 +560,7 @@
                 <!-- span is used otherwise a div vould have a border long as the container -->
                 <span class="language-selector">
                     <i class="fa-solid fa-earth-americas"></i>
-                    Italiano
+                    <span class="language">Italiano</span>
                     <i class="fa-solid fa-caret-up"></i>
                 </span>
             </div>
