Added new style

--- a/new-website.html
+++ b/new-website.html
@@ -15,9 +15,12 @@
     <!-- font awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'>
     <!-- styles.css -->
-    <link rel="stylesheet" href="styles/styles.css" type="text/css">
+    <link rel="stylesheet" href="styles/new-style.css" type="text/css">
 </head>
 <body>
+
+    <!-- ! THIS HTML IS IDENTICAL TO INDEX.HTML; ONLY DIFFERENCES ARE THE LINKED .CSS FILE AND THIS VERSION HAS NO LINK BUTTON TO NEW WEBSITE -->
+
 
     <!-- Exercise made by
     CARLO EUSEBI -->
@@ -802,20 +805,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- EXTERNAL LINK -->
-        
-        <a href="/new-website.html">
-            <div class="new-website-link">
-                <div class="d-flex align-center">
-                    <div class="link-img">
-                        <img src="img/chat-logo.png" alt="dropbox logo">
-                    </div>
-                    <div class="link-text">Prova il nostro nuovo sito!</div>
-                </div>
-            </div>
-        </a>
-
     </main>
         
     <!-- FOOTER -->
