Fixed chat dimension for smaller screens

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 
         <!-- EXTERNAL LINK -->
         
-        <a href="/new-website.html">
+        <a href="new-website.html">
             <div class="new-website-link">
                 <div class="d-flex align-center">
                     <div class="link-img">
